# CrateProbe

./: .gitignore  .ltgenconfig  CHANGELOG.md  CLAUDE.md  Project.md  README.md  RUNNER.md  config.toml.example  docker-compose.yml  require.md  start_runner.sh
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  security.py
backend/app/api/: __init__.py  websocket.py
backend/app/runner/: __init__.py  __main__.py  client.py  config.py  worker.py
backend/app/services/: crates_api.py  runner_metrics_store.py  scheduler.py  system_monitor.py  task_executor.py
backend/app/utils/: docker_runner.py  file_utils.py  local_runner.py  resource_limit.py  runner_base.py
backend/core/: __init__.py  models.py  schemas.py
backend/docker/: Dockerfile.backend  Dockerfile.executor  Dockerfile.runner
backend/runner/: __init__.py  __main__.py  client.py  config.py  docker_runner.py  executor.py  reporter.py  worker.py
backend/tests/integration/: test_api.py  test_runner_admin_api.py  test_runner_control_api.py  test_websocket.py
backend/tests/unit/: test_config.py  test_crates_api.py  test_database.py  test_docker_runner.py  test_file_utils.py  test_local_runner.py  test_main.py  test_resource_limit.py  test_runner_base.py  test_runner_client.py  test_runner_metrics_store.py  test_runner_worker.py  test_scheduler.py  test_security.py  test_system_monitor.py  test_task_executor.py
backend/tests/unit/core/: test_models.py
backend/tests/unit/runner/: test_docker_runner.py  test_executor.py  test_reporter.py  (+2 more)
(+74 files in other folders)
