[project]
name = "experiment-platform"
version = "0.1.0"
description = "Automated Rust crate testing platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.0",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "aiofiles==23.2.1",
    "psutil==5.9.6",
    "httpx==0.25.1",
    "websockets==12.0",
    "python-multipart==0.0.6",
    "tomli==2.0.1; python_version < '3.11'",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
]
